--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 *{
-    
+  font-family: "Poppins", sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
  /* background-image: url('./img/pokemon.webp'); */
 }
-body { 
-    
-  }
+
 
   #homepage{
 
@@ -25,26 +24,55 @@ body {
   }
 
   #homepage-con{
+    box-shadow: 6px 6px 20px rgba(12, 12, 12, 0.212);
     border-radius: 20px;
     width: 60%;
     height: 70vh;
     background-color: #faa307;
     display: flex;
+    flex-direction: column;
     background: linear-gradient(to right bottom, 
-    rgba(255, 255, 255, 0.7), 
-    rgba(250 ,255, 255, 0.2));
-   
+    rgba(253, 255, 182, 0.6), 
+    rgba(253, 255, 182, 0.7));
+    box-shadow: 1px 1px 30px rgba(12, 12, 12, 0.3);
+    /* rgba(255, 255, 255, 0.7), 
+    rgba(250 ,255, 255, 0.2)); */
   }
 
   .search{
-   border-radius: 20px;
-    width: 270px;
-    height: 100%;
-    background-color: aqua;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 20px;
+    width: 100%;
+    height: 15%;
+    background: linear-gradient(to right bottom, 
+    rgba(252, 163, 17, 0.7), 
+    rgba(252, 163, 17, 0.7));
     display: flex;
-    flex-direction: column;
+    
     align-items: center;
-    justify-items: center;
+    justify-content: space-evenly;
+  }
+  .search-input{
+    background: linear-gradient(to right bottom, 
+    rgba(253, 255, 182, 0.6), 
+    rgba(253, 255, 182, 0.7));
+    border-radius: 1rem;
+    width: 25%;
+    height: 30%;
+    padding: 0.5rem;
+    border: none
+  }
+  .search-btn{
+    font-weight: 500;
+    color:#f35b04;
+    cursor: pointer;
+    background: linear-gradient(to right bottom, 
+    rgba(253, 255, 182, 0.6), 
+    rgba(253, 255, 182, 0.7));
+    border: none;
+    min-width: 10px;
+    height: 35%;
+    border-radius: .5rem;
   }
   .desc{
     width: 530px;
